<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/set_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"
        app:riv_oval="true"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_profile"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:hint="@string/username"
        android:minHeight="48dp"
        android:padding="6dp"
        android:textColor="#000000"
        android:textStyle="bold">

    </EditText>


    <EditText
        android:id="@+id/user_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_profile"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="72dp"
        android:layout_marginRight="15dp"
        android:hint="@string/address"
        android:minHeight="48dp"
        android:padding="6dp"
        android:textColor="#000000"
        android:textStyle="bold">

    </EditText>

    <EditText
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_profile"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="15dp"
        android:hint="@string/phone"
        android:minHeight="48dp"
        android:padding="6dp"
        android:textColor="#000000"
        android:textStyle="bold">

    </EditText>

    <Button
        android:id="@+id/update_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="159dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#296319"
        android:inputType="textMultiLine"
        android:padding="6dp"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextViewEdits">

    </Button>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="659dp"
        android:layout_marginEnd="347dp" />
</RelativeLayout>