<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:riv_border_width="2dp"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"

        android:layout_marginRight="15dp"
        android:layout_marginBottom="455dp"
        android:text="@string/user_name"
        android:textAllCaps="false"
        android:textColor="#296319"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"

        android:layout_marginRight="15dp"
        android:layout_marginBottom="405dp"
        android:text="@string/aaddresss"
        android:textAllCaps="false"
        android:textColor="#296319"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"

        android:layout_marginRight="15dp"
        android:layout_marginBottom="358dp"
        android:text="@string/phonee"
        android:textAllCaps="false"
        android:textColor="#296319"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/logout"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="683dp"
        android:src="@drawable/baseline_logout_24" />

    <ImageView
        android:id="@+id/update"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="342dp"
        android:layout_marginBottom="688dp"
        android:src="@drawable/baseline_edit_note_24" />

</RelativeLayout>